# Sagemaker-PyTorch-Lightning-Experiments

./: .gitignore  Cleanup.ipynb  MNIST_LocalMode.ipynb  MNIST_TrainingJob.ipynb  MNIST_notebook_training.ipynb  README.md  cleanup.ipynb  pyproject.toml
code/: data_modules.py  mnist_pl.py  mnist_pl_ddp.py  models.py  requirements.txt  sm_debug_callback.py  sm_experiments.py  sm_logger.py  sm_utils_fns.py
